--- a/index.html
+++ b/index.html
@@ -480,10 +480,10 @@
                 classMinValue: 1, 
                 classMaxValue: 10000, 
                 symbol: { 
-                  strokeStyle: '#ffb81c', 
+                  strokeStyle: '#8BC34A', 
                   lineWidth: 0.5, 
                   lineCap: 'round', 
-                  shadowColor: '#fee8c8', 
+                  shadowColor: '#DCEDC8', 
                   shadowBlur: 2.0 
                 } 
               },
@@ -502,19 +502,19 @@
                 classMinValue: 20001, 
                 classMaxValue: 200000, 
                 symbol: { 
-                  strokeStyle: '#d22630', 
+                  strokeStyle: '#4CAF50', 
                   lineWidth: 3, 
                   lineCap: 'round', 
-                  shadowColor: '#e34a33', 
+                  shadowColor: '#C8E6C9', 
                   shadowBlur: 2.0 
                 } 
               }
             ],
             defaultSymbol: { 
-              strokeStyle: '#e7e1ef', 
+              strokeStyle: '#388E3C', 
               lineWidth: 0.5, 
               lineCap: 'round', 
-              shadowColor: '#e7e1ef', 
+              shadowColor: #A5D6A7', 
               shadowBlur: 1.5 
             }
           },
