--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
               strokeStyle: '#388E3C', 
               lineWidth: 0.5, 
               lineCap: 'round', 
-              shadowColor: #A5D6A7', 
+              shadowColor: '#A5D6A7', 
               shadowBlur: 1.5 
             }
           },
