--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                 classMinValue: 1, 
                 classMaxValue: 10000, 
                 symbol: { 
-                  strokeStyle: '#8BC34A', 
+                  strokeStyle: '#ffb81c', 
                   lineWidth: 0.5, 
                   lineCap: 'round', 
                   shadowColor: '#DCEDC8', 
@@ -502,7 +502,7 @@
                 classMinValue: 20001, 
                 classMaxValue: 200000, 
                 symbol: { 
-                  strokeStyle: '#4CAF50', 
+                  strokeStyle: '#d22630', 
                   lineWidth: 3, 
                   lineCap: 'round', 
                   shadowColor: '#C8E6C9', 
