--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
               radius: radius,
               weight: 1,
               color: '#fff',
-              fillColor: feature.properties.isOrigin ? '#ff671f' : '#418FDE',
+              fillColor: feature.properties.isOrigin ? '#418FDE' : '#ff671f',
               fillOpacity: feature.properties.isOrigin ? 0.8 : 0.7
             };
           },
