--- a/index.html
+++ b/index.html
@@ -476,47 +476,11 @@
             type: 'classBreaks',
             field: 'e_Volume',
             classBreakInfos: [
-              { 
-                classMinValue: 0, 
-                classMaxValue:  1, 
-                symbol: { 
-                  strokeStyle: '#ffb81c', 
-                  lineWidth: 0.5, 
-                  lineCap: 'round', 
-                  shadowColor: '#DCEDC8', 
-                  shadowBlur: 2.0 
-                } 
-              },
-              { 
-                classMinValue: 10001, 
-                classMaxValue: 50000, 
-                symbol: { 
-                  strokeStyle: '#ff671f', 
-                  lineWidth: 1.5, 
-                  lineCap: 'round', 
-                  shadowColor: '#fdbb84', 
-                  shadowBlur: 2.0 
-                } 
-              },
-              { 
-                classMinValue: 50001, 
-                classMaxValue: 200000, 
-                symbol: { 
-                  strokeStyle: '#d22630', 
-                  lineWidth: 3, 
-                  lineCap: 'round', 
-                  shadowColor: '#C8E6C9', 
-                  shadowBlur: 2.0 
-                } 
-              }
+              { classMinValue: 1, classMaxValue: 10000, symbol: { strokeStyle: '#ffb81c', lineWidth: 0.5, lineCap: 'round', shadowColor: '#fee8c8', shadowBlur: 2.0 } },
+              { classMinValue: 10001, classMaxValue: 20000, symbol: { strokeStyle: '#ff671f', lineWidth: 1.5, lineCap: 'round', shadowColor: '#fdbb84', shadowBlur: 2.0 } },
+              { classMinValue: 20001, classMaxValue: 200000, symbol: { strokeStyle: '#d22630', lineWidth: 3, lineCap: 'round', shadowColor: '#e34a33', shadowBlur: 2.0 } }
             ],
-            defaultSymbol: { 
-              strokeStyle: '#388E3C', 
-              lineWidth: 0.5, 
-              lineCap: 'round', 
-              shadowColor: '#A5D6A7', 
-              shadowBlur: 1.5 
-            }
+            defaultSymbol: { strokeStyle: '#e7e1ef', lineWidth: 0.5, lineCap: 'round', shadowColor: '#e7e1ef', shadowBlur: 1.5 }
           },
           pathDisplayMode: 'all',
           animationStarted: true,
