--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <!-- Custom CSS -->
   <style>
-   body {
+    body {
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -56,7 +56,7 @@
       margin-bottom: 20px;
     }
     
-    #map {
+    #map, #map2 {
       height: 100%;
       width: 100%;
     }
