--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
   
   <!-- Custom CSS -->
   <style>
-    body {
+     html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
+      overflow: hidden;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f5f7fa;
-      color: #333;
     }
     
     .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
+       height: 100vh;
+      width: 100vw;
+      position: relative;
+      overflow: hidden;
     }
     
     .header {
